@@ -235,10 +235,6 @@ module ActionController #:nodoc:
     # directive. Values should always be specified as strings.
     attr_accessor :headers
     
-    # Holds a hash of cookie names and values. Accessed like <tt>@cookies["user_name"]</tt> to get the value of the user_name cookie.
-    # This hash is read-only. You set new cookies using the cookie method.
-    attr_accessor :cookies
-    
     # Holds the hash of variables that are passed on to the template class to be made available to the view. This hash
     # is generated by taking a snapshot of all the instance variables in the current scope just before a template is rendered.
     attr_accessor :assigns
@@ -557,6 +553,11 @@ module ActionController #:nodoc:
       #   )
       def cookie(*options) #:doc:
         @response.headers["cookie"] << CGI::Cookie.new(*options)
+      end
+
+      # Returns the value of the cookie by +name+ -- or nil if no such cookie exist. You set new cookies using the cookie method.
+      def cookies[](name)
+        @cookies[name].value if @cookies[name]
       end
 
       # Resets the session by clearsing out all the objects stored within and initializing a new session object.
